# CortexOS

./: .geminiignore  .gitignore  .last_notif.json  .xz_config.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CortexOS_Control_Center.md  IDENTITY.md  README.md  TODO.md  ecosystem.config.cjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  soul.md
.agents/skills/: audio-music-engineer-skill  chrome-native-debug  cinematic-storyboard-skill  code-standards-skill  github-uploader-skill  logo-designer  pk-ecommerce-init  pwa-master-skill  r2-uploader-skill  think-skill  wechat-publisher-skill
.githooks/: pre-commit
.github/workflows/: brain-health.yml  deploy.yml  release.yml
.memory/: memory_formula.md
.memory/identity/: app_habits.md  device_profile.md  owner_profile.md  profile.json
.obsidian/: workspace.json
config/: brain-runtime.json  brains.json
docs/: BRAIN_HISTORY.md  about.md  ai-team.md  index.md  mcp-console.md  router.md  skills.md  tech_stack.md
logs/: 2026-03-04-fleet-refit.md
mcp_server/: mcp_config.json  pyproject.toml  server.py
openspec/: config.yaml
scripts/: auto-commit.js  auto-pilot-manager.js  auto-pilot-native.js  auto-pilot.js  auto-recycle.js  cleanup-docs.js  g.sh  gemini_manager.sh  generate_wallpaper.py  health-check.js  init-project.sh  log.sh  log_task.py  move-files.js  rag_probe.sh  record-operations.js  sentinel.js  setup-autopilot.sh  verify-clean.js  xiaozhu_chat.mjs
services/brain-tui/: README.md  pyproject.toml
services/brain-tui/src/brain_tui/: app.py  data.py
skills/: README.md
(+323 files in other folders)
