[project]
name = "cortexos"
version = "0.1.0"
description = "CortexOS — 个人外部大脑操作系统核心基座"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "chromadb>=0.4.0",
    "requests>=2.31.0",
    "pathlib>=1.0.1",
    "mcp>=1.26.0",
    "fastmcp>=3.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]

[tool.uv.workspace]
members = [
    "mcp_server",
]
