[project]
name = "brain-tui"
version = "0.1.0"
description = "CortexOS Brain terminal console powered by Textual"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "textual>=0.86.0",
]

[project.scripts]
brain-tui = "brain_tui.app:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/brain_tui"]
